<resources>
    <string name="app_name">Image View</string>
    <string name="tana_cafe">Tana Cafe</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="open_second_activity">open second activity</string>
    <string name="order_text">Order</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Address">Adress</string>
    <string name="enter_your_name_address">Enter your address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="note">Note</string>
    <string name="enter_some_note">Enter some note</string>
    <string name="choose_a_delivery_methode">choose a delivery methode:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="choose_type_of_phone">choose type of phone</string>
    <string name="action_contact" >contact</string>
    <string name="action_order">order</string>
    <string name="action_status">status</string>
    <string name="action_favorite">favorite</string>
    <string-array name="labels_array">
        <item>home</item>
        <item>work</item>
        <item>mobile</item>
        <item>other</item>
    </string-array>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>