<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item android:id="@+id/action_order"
        android:icon="@drawable/ic_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"/>
    <item android:id="@+id/action_status"
        android:icon="@drawable/ic_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"/>
    <item android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

</menu>